Set 1-page format

--- a/index.html
+++ b/index.html
@@ -1,17 +1,163 @@
-<!doctype html>
-<title>Site Maintenance</title>
-<style>
-  body { text-align: center; padding: 150px; }
-  h1 { font-size: 50px; }
-  body { font: 20px Helvetica, sans-serif; color: #333; }
-  article { display: block; text-align: left; width: 750px; margin: 0 auto; }
-  a { color: #dc8100; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
-</style>
-
-<article>
-    <h1>Site is temporarily unavailable.</h1>
-    <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment.</p>
+<html lang=""><script async="false" type="text/javascript" src="josefkjaergaard.com_files/in-page.js"></script><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-language" content="en">
+    <title>Janno Santiago | Software Engineer | Web Developer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <link rel="stylesheet" type="text/css" href="josefkjaergaard.com_files/styles.css">
+    <link href="josefkjaergaard.com_files/css_002.css" rel="stylesheet">
+    <link href="josefkjaergaard.com_files/css.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="page-container">
+      <div class="page-container__inner">
+        <div class="page-container__content">
+          <h1>Full-stack JavaScript engineer <br>and front-end developer</h1>
+          <div class="side-panel">
+            <div class="side-panel__contact">
+              <div class="side-panel__image" style="background-image: url(/graphics/../headshot.jpg)">
+              </div>
+              <div class="side-panel__body">
+                <h4>Josef Kjærgaard</h4>
+                <p>Nannasgade 13, 3. tv.<br>2200 København N</p>
+                <p> <a href="mailto:josef@josefkjaergaard.com">josef@josefkjaergaard.com</a><br><a href="tel:+4561718797">+45 61 71 87 97</a></p>
+              </div>
+            </div>
+            <div class="side-panel__jump">
+              <h4>Jump to</h4>
+              <p><a href="#last">Last 3 projects</a><br><a href="#cv">CV</a><br><a href="#skills">Skills</a><br><a href="#personal">Personal note</a></p>
+            </div>
+          </div>
+          <h2 class="hide-desktop">Introduction</h2>
+          <p>With a background as a digital designer and more than 15 
+years of programming experience I have helped companies launch digital 
+products in wide range of categories. From WordPress sites to highly 
+specialized websites, web- and mobile apps built from the ground up.</p>
+          <p>My skills are focused around front-end development and 
+JavaScript, but I work fluently with everything from UX and digital 
+design to back-end and mobile development.</p>
+          <h2 id="last">The last 3 projects</h2>
+          <p>“You are never better than your last project” ..however I 
+have chosen to highlight my last three project as they provide good 
+examples of my work.</p>
+          <h3 id="reppio">Reppio</h3><span class="year">2017 - </span>
+          <h4>Co-founder, designer and full-stack developer.</h4>
+          <p>Reppio is a SaaS platform for managing a flexible 
+workforce. It lets our clients schedule, brief and communicate with 
+their workforce. </p>
+          <p>As responsible for the product I have done everything from UX and design to front-end, back-end and mobile development.</p>
+          <p>We currently have 30+ happy (and paying) clients and our platform helped schedule and execute more than 3500 jobs.</p>
+          <p>Visit <a href="https://reppio.co/" target="_blank">reppio.co</a></p>
+          <h3>Ejendomstorvet.dk App</h3><span class="year">2019</span>
+          <h4>React Native development</h4>
+          <p>Just finishing a large React Native project. The app allows
+ users access and filtering of an extensive database on the go. The app 
+integrates Google Maps and point clustering libraries to display 
+location based data sets. </p>
+          <p>React Native was used as a platform to speed up development and to have as much shared code across platforms as possible. </p>
+          <p>Visit <a href="https://apps.apple.com/us/app/ejendomstorvet-dk/id1476403608" target="_blank">Ejendomstorvet iOS</a></p>
+          <p>Visit <a href="https://play.google.com/store/apps/details?id=dk.ejendomstorvet.android&amp;hl=en" target="_blank">Ejendomstorvet Android</a></p>
+          <h3 id="pso-happy">PsoHappy, LEO Innovation Lab</h3><span class="year">2015 - 2017</span>
+          <h4>Full-stack developer and technical lead</h4>
+          <p>Being part of LEO Innovation Lab from more than 2 years I worked on several products in their portfolio. </p>
+          <p>PsoHappy is a global survey platform collecting data about 
+the happiness of people living with psoriasis. As the technical lead of 
+the project I was responsible for the overall architecture and as well 
+as the back-end, front-end and mobile development.</p>
+          <p>Visit <a href="https://leoinnovationlab.com/" target="_blank">LEO Innovation Lab</a></p>
+          <p>Visit <a href="https://psohappy.org/" target="_blank">psohappy.org</a></p>
+          <h2 id="cv">CV</h2>
+          <h3>Reppio</h3><span class="year">2017 - </span>
+          <p>Co-founder, designer and full-stack developer. <a href="#reppio">More info above.</a></p>
+          <h3>LEO Innovation Lab</h3><span class="year">2015 - 2017</span>
+          <p>Technical project lead and full-stack JavaScript developer. <a href="#pso-happy">More info above.</a></p>
+          <h3>Freelance</h3><span class="year">2001 - </span>
+          <h4>Digital Designer, Front-end and Javascript developer. </h4>
+          <p>As a freelancer I have helped a wide range of clients including: <b>LBi</b>, <b>DR (Danish Public Broadcasting)</b>, <b>Vertic</b>, <b>Spring / Summer</b>, <b>DesignIt</b> and many more.
+            I worked on projects for clients such as <b>Carlsberg</b>, <b>Nike</b>, <b>Maersk</b>, <b>Danske Banke</b>, <b>Telenor</b>, <b>Nokia.</b>
+          </p>
+          <p>As a freelancer i have worked on everything from small 
+project as the only designer/developer to large projects being part of 
+agile development teams. </p>
+          <h3>In2media</h3><span class="year">2008 - 2011 </span>
+          <h4>Flash Developer </h4>
+          <p>I led flash development of several digital publishing 
+platforms for branded content and websites with a strong focus on 
+branding and user experience. </p>
+          <h3>Co+Høgh</h3><span class="year">2008 - 2011 </span>
+          <h4>Digital Designer and Flash developer</h4>
+          <p>As part of Co+Høgh I helped design and develop digital campaign assets supporting the offline marketing matrials. </p>
+          <h3>Firstborn Multimedia NYC (Internship)</h3><span class="year">Jan 2006 - August 2006</span>
+          <h4>Digital designer and flash developer</h4>
+          <p>During my internship at Firsborn Multimedia I was part of everything from idea generation to developing the final products.</p>
+          <h3>Danmarks Designskole </h3><span class="year">2001 - 2007 </span>
+          <h4>Visual Communication Degree</h4>
+          <p>During my studies there was a strong focus on design 
+process, understanding users needs and execution. I primarely worked in 
+various digital media such as animation, websites and interactive 
+installations.  </p>
+          <h2 id="skills">Skills</h2>
+          <div class="skills-grid">
+            <div class="skills-grid__column">
+              <h4>Languages</h4>
+              <ul>
+                <li>JavaScript</li>
+                <li>HTML</li>
+                <li>CSS / SASS</li>
+                <li>GraphQL</li>
+                <li>Node.js</li>
+                <li>React Native</li>
+              </ul>
+            </div>
+            <div class="skills-grid__column">
+              <h4>Frameworks</h4>
+              <ul>
+                <li>Express</li>
+                <li>React</li>
+                <li>React SSR</li>
+                <li>React Native</li>
+                <li>Redux</li>
+                <li>Angular JS</li>
+                <li>MobX</li>
+                <li>Apollo Client/Server</li>
+              </ul>
+            </div>
+            <div class="skills-grid__column">
+              <h4>Tools</h4>
+              <ul>
+                <li>AWS</li>
+                <li>Gulp </li>
+                <li>Grunt</li>
+                <li>Webpack</li>
+                <li>Cypress.js</li>
+                <li>Sentry.io</li>
+                <li>Git</li>
+                <li>NPM / Yarn</li>
+              </ul>
+            </div>
+            <div class="skills-grid__column">
+              <h4>Miscellaneous</h4>
+              <ul>
+                <li>UX design</li>
+                <li>UI design</li>
+                <li>Digital design</li>
+                <li>Platform Architecture</li>
+                <li>SEO optimizing </li>
+                <li>OOP</li>
+                <li>Prototyping</li>
+                <li>Functional </li>
+              </ul>
+            </div>
+          </div>
+          <h2 id="note">A personal note</h2>
+          <p>Originally from the west-coast of Denmark but living in 
+Copenhagen since 2001. I have been using the computer as a creativ 
+outlet since the Commadore 64 and still consider myself to be most of 
+all a digital media craftsman. </p>
+          <p>I enjoy running, sailing, concerts and festivals.. and the occational IPA in my favorite Nørrebro bars. </p>
+        </div>
+      </div>
     </div>
-</article>
+  
+</body></html>
