--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="content-language" content="en">
     <title>Janno Santiago | Software Engineer | Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <link rel="stylesheet" type="text/css" href="josefkjaergaard.com_files/styles.css">
-    <link href="josefkjaergaard.com_files/css_002.css" rel="stylesheet">
-    <link href="josefkjaergaard.com_files/css.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="css_002.css" rel="stylesheet">
+    <link href="css.css" rel="stylesheet">
   </head>
   <body>
     <div class="page-container">
       <div class="page-container__inner">
         <div class="page-container__content">
-          <h1>Full-stack JavaScript engineer <br>and front-end developer</h1>
+          <h1>Software Engineer <br>and Web Developer</h1>
           <div class="side-panel">
             <div class="side-panel__contact">
               <div class="side-panel__image" style="background-image: url(/graphics/../headshot.jpg)">
               </div>
               <div class="side-panel__body">
-                <h4>Josef Kjærgaard</h4>
+                <h4>Janno Santiago</h4>
                 <p>Nannasgade 13, 3. tv.<br>2200 København N</p>
-                <p> <a href="mailto:josef@josefkjaergaard.com">josef@josefkjaergaard.com</a><br><a href="tel:+4561718797">+45 61 71 87 97</a></p>
+                <p> <a href="mailto:janno2300@yahoo.com.ph">janno2300@yahoo.com.ph</a><br><a href="tel:+4561718797">+45 61 71 87 97</a></p>
               </div>
             </div>
             <div class="side-panel__jump">
