Corrected CV link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <h4>Jump to</h4>
                         <p>
                             <a href="#last">Notable projects</a><br>
-                            <a href="#cv">CV</a> | &nbsp;<a href="Janno Santiago.docx"">Download</a><br><a href="#skills">Skills</a><br>
+                            <a href="#cv">CV</a> | &nbsp;<a href="Janno Santiago.docx">Download</a><br><a href="#skills">Skills</a><br>
                         </p>
                     </div>
                 </div>
