--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <h4>Jump to</h4>
                         <p>
                             <a href="#last">Notable projects</a><br>
-                            <a href="#cv">CV</a> | &nbsp;<a href="Janno Santiago.docx">Download</a><br><a href="#skills">Skills</a><br>
+                            <a href="#cv">CV</a> | &nbsp;<a href="Janno Santiago.docx" onclick="notifyDownload(event)">Download</a><br><a href="#skills">Skills</a><br>
                         </p>
                     </div>
                 </div>
@@ -160,5 +160,25 @@
     </div>
 
 </body>
+
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script type="text/javascript">
+    emailjs.init("GCX7Rk7lv_FMwJhjS");
+    function notifyDownload(event) {
+        event.preventDefault();
+        emailjs.send("service_v0nwgro", "template_w6us3h4", { //service id, template id
+            file_name: "Janno Santiago.docx",
+            user_email: "janno2300@yahoo.com.ph"
+        }).then(
+            () => {
+                console.log("Notification email sent!");
+                window.location.href = event.target.href;
+            },
+            (err) => {
+                console.error("Failed to send email:", err);
+            }
+        );
+    }
+</script>
 
 </html>
