Corrected spelling for Philippines

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="side-panel__body">
                             <h4>Janno Santiago</h4>
                             <p>
-                                Quezon City, Philipines
+                                Quezon City, Philippines
                             </p>
                             <p>
                                 <a href="mailto:janno2300@yahoo.com.ph">janno2300@yahoo.com.ph</a><br>
