--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h4>Software Engineer</h4>
                 <p>Actively involved in all phases of the software development life cycle for the company's in-house HRIS / timekeeping, sales projection application, order queueing application among other projects</p>
 
-                <h3>Westpoint Interdata Group Inc.</h3><span class="year">May 2013 2013 - June 2015 (2 years 2 months)</span>
+                <h3>Westpoint Interdata Group Inc.</h3><span class="year">May 2013 - June 2015 (2 years 2 months)</span>
                 <h4>Software Engineer</h4>
                 <p>Created a web application, reports, and dashboards used by the QAs and administrators to continuously monitor agent calls and to generate leads summary and analytics for a lead-generation company.</p>
 
