Added Work Experience entry

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 
                 <h2 id="cv">CV</h2>
 
+                <h3>Asian Institute of Management</h3><span class="year">May 2025 - Present</span>
+                <h4>IT Specialist for Business Applications</h4>
+
                 <h3>Everlounge Inc.</h3><span class="year">November 2021 - January 2025 (3years 2 months)</span>
                 <h4>QA and Web Applications Developer</h4>
                 <p>Performed quality assurance for email content and automations as well as website health checking and version monitoring. As a Web Applications Developer, implemented multiple improvements to the company's proprietary CRM system.</p>
