--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <link href="css_002.css" rel="stylesheet">
     <link href="css.css" rel="stylesheet">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C4RDJB2E6R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C4RDJB2E6R');
+</script>
+
 <body>
 
     <div class="page-container">
